--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 relative_permalinks: false
 
 # Setup
-title:            Goldblatt
+title:            Dylan Goldblatt
 tagline:          '@ndgold'
 description:      'Technologist & Professor'
 url:              http://www.ndgold.com
