--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ permalink:        pretty
 relative_permalinks: false
 
 # Setup
-title:            Dylan G
+title:            Dylan Takes Notes
 tagline:          '@ndgold'
-description:      'Technologist & Professor'
+description:      'Technologist & Germanist'
 url:              http://www.ndgold.com
 baseurl:          /
 
