--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ permalink:        pretty
 relative_permalinks: false
 
 # Setup
-title:            Dylan Takes Notes
-tagline:          '@ndgold'
+title:            Dylan Goldblatt
+tagline:          'A Daybook'
 description:      'Technologist & Germanist'
 url:              http://www.ndgold.com
 baseurl:          /
