--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 relative_permalinks: false
 
 # Setup
-title:            Dylan Goldblatt
+title:            'Dylan Goldblatt'
 tagline:          'A Daybook'
 description:      'Technologist & Germanist'
 url:              http://www.ndgold.com
