--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ permalink:        pretty
 relative_permalinks: false
 
 # Setup
-title:            'Dylan Goldblattz'
-tagline:          'A Daybook'
+title:            'Dylan Goldblatt'
+tagline:          'essays & daybooks'
 description:      'Technologist & Germanist'
 url:              http://www.ndgold.com
 baseurl:          /
